--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
         <div id="wrapper">
             <!-- <span class="byline">&#10555; <a href="http://www.jehosafet.com" target="_blank">Jehosafet</a></span> -->
             <div id="content">
-                <div id="slider1"></div>
-                <div id="slider2"></div>
-                <div id="slider3"></div>
+                <h1>Drift diffusion simulation</h1>
                 <div id="chart"></div>
+                <div class="slider-wrapper">S: <div id="slider1"></div></div>
+                <div class="slider-wrapper">K: <div id="slider2"></div></div>
+                <div class="slider-wrapper">A: <div id="slider3"></div></div>
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
         <script src="http://d3js.org/d3.v3.min.js"></script>
         <script type="text/javascript" src="static/d3.slider.js"></script>
+        <script type="text/javascript" src="static/colorbrewer.js"></script>
         <script type="text/javascript" src="static/drift.js"></script>
     </body>
 </html>
