--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <div id="content">
                 <h1>Drift diffusion simulation</h1>
                 <div id="chart"></div>
-                <div class="slider-wrapper">S: <div id="slider1"></div></div>
-                <div class="slider-wrapper">K: <div id="slider2"></div></div>
-                <div class="slider-wrapper">A: <div id="slider3"></div></div>
+                <div class="slider-wrapper">diffusion rate: <span id="s1val"></span> <div id="slider1"></div></div>
+                <div class="slider-wrapper">drift rate multiplier: <span id="s2val"></span> <div id="slider2"></div></div>
+                <div class="slider-wrapper">bound height: <span id="s3val"></span> <div id="slider3"></div></div>
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
