--- a/index.html
+++ b/index.html
@@ -30,10 +30,24 @@
             <!-- <span class="byline">&#10555; <a href="http://www.jehosafet.com" target="_blank">Jehosafet</a></span> -->
             <div id="content">
                 <h1>Drift diffusion simulation</h1>
+                <div id="sliders">
+                    <div class="slider-wrapper">
+                        <span class="slider-name">diffusion rate:</span>
+                        <span id="s1val" class="slider-val"></span>
+                        <div id="slider1"></div>
+                    </div>
+                    <div class="slider-wrapper">
+                        <span class="slider-name">drift rate multiplier:</span>
+                        <span id="s2val" class="slider-val"></span>
+                        <div id="slider2"></div>
+                    </div>
+                    <div class="slider-wrapper">
+                        <span class="slider-name">bound height:</span>
+                        <span id="s3val" class="slider-val"></span>
+                        <div id="slider3"></div>
+                    </div>
+                </div>
                 <div id="chart"></div>
-                <div class="slider-wrapper">diffusion rate: <span id="s1val"></span> <div id="slider1"></div></div>
-                <div class="slider-wrapper">drift rate multiplier: <span id="s2val"></span> <div id="slider2"></div></div>
-                <div class="slider-wrapper">bound height: <span id="s3val"></span> <div id="slider3"></div></div>
             </div>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
