--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       xmlns:fb="https://www.facebook.com/2008/fbml"> 
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <meta property="og:image" content="static/icon.png"/>
         
         <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
@@ -28,7 +29,7 @@
     <body>
         <a href="https://github.com/mobeets/drift-diffusion-gui"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
         <div id="wrapper">
-            <span class="byline">&#10555; <a href="http://www.jehosafet.com" target="_blank">Jehosafet</a></span>
+            <span class="byline"><a href="http://www.jehosafet.com" target="_blank">Jehosafet</a> &#8613;</span>
             <div id="content">
                 <h1>Drift diffusion psychophysics</h1>
                 <div id="chart"></div>
