--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     Above, an example of the drift diffusion of 500 particles for 100 timesteps, where warmer colors represent higher drift rates, and all particles have the same diffusion rate. For more information check <a href="https://github.com/mobeets/drift-diffusion">this</a> out.
                 </p>
             </div>
+            <span class="endline">&#10555; <a href="https://github.com/mobeets/drift-diffusion-gui">code on github</a></span>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
         <script src="http://d3js.org/d3.v3.min.js"></script>
